<resources>
    <string name="app_name">Dynamic Recommendation System</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_name">Dynamic Recommendation System</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="full_name">Full Name</string>
    <string name="DOB">DOB (MM/DD/YYYY)</string>
    <string name="gender">Gender (Male/Female)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_edit_profile">Profile</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_DOB">Birth Date in format MM/DD/YYYY</string>
    <string name="error_gender">Gender is either Male or Female</string>
    <string name="error_empty_input">This filed is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
